# qbrin-python

./: .gitignore  CONNECTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: ask_with_citations.py  verify_agent_action.py
src/qbrin/: __init__.py  __main__.py  cli.py  client.py  errors.py  models.py
tests/: test_client.py
