[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbrin"
version = "0.1.0"
description = "The Universal Trust Layer for AI agents — grounded answers with a citation behind every claim, or an honest verdict instead of a guess."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "qbrin", email = "katesaikishore@qbrin.com" }]
keywords = ["ai", "agents", "verification", "grounding", "rag", "hallucination", "citations"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
qbrin = "qbrin.cli:main"

[project.urls]
Homepage = "https://qbrin.com"
Repository = "https://github.com/qbrin-stack/qbrin-python"

[tool.hatch.build.targets.wheel]
packages = ["src/qbrin"]
